--- a/cirurgic-request-frontend/package.json
+++ b/cirurgic-request-frontend/package.json
@@ -10,12 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
+    "axios": "^1.6.7",
+    "moment": "^2.30.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.49.3",
     "react-icons": "^5.0.1",
+    "react-input-mask": "^2.0.4",
     "react-router-dom": "^6.21.3",
-    "styled-components": "^6.1.8"
+    "react-toastify": "^10.0.4",
+    "styled-components": "^6.1.8",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.23.9",
