--- a/cirurgic-request-frontend/package.json
+++ b/cirurgic-request-frontend/package.json
@@ -7,12 +7,14 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint:css": "stylelint './src/**/*.js'"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
     "axios": "^1.6.7",
     "moment": "^2.30.1",
+    "postcss-styled-syntax": "^0.6.4",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -22,6 +24,7 @@
     "react-router-dom": "^6.21.3",
     "react-toastify": "^10.0.4",
     "styled-components": "^6.1.8",
+    "stylelint-config-standard": "^36.0.0",
     "yup": "^1.3.3"
   },
   "devDependencies": {
@@ -49,6 +52,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "jest-styled-components": "^7.2.0",
     "prettier": "^3.2.4",
+    "stylelint": "^16.2.1",
     "vite": "^5.0.8"
   }
 }
